@@ -1,3 +1,4 @@
+* Add icons on Many2One in editable tree
 * Use translated values when exporting Reference and Selection fields
 
 Version 4.6.0 - 2017-10-30
